Added some test text to the project goals

--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
 
       </div>
 
-      <div class="projects"></div>
+      <div class="projects">
+        <h1>Header</h1>
+        <div>
+          <ul>
+            <li>Text</li>
+            <li>Text</li>
+            <li>Text</li>
+          </ul>
+        </div>
+      </div>
 
       
 
