Added functionality to add new task button

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <input id="project-name">
         <label>Due Date</label>
         <input type="date" id="date">
-        <input id="task">
         <button class="task-btn">&#43; add new task</button>
+        <ul class="task-list" id="task-list"></ul>
         <label>Add a note</label>
         <textarea></textarea>
         <button id="create">Create</button> 
