Added a createProject() function to add data to object

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <button class="task-btn">&#43; add new task</button>
         <ul class="task-list" id="task-list"></ul>
         <label>Add a note</label>
-        <textarea></textarea>
+        <textarea id="note"></textarea>
         <button id="create">Create</button> 
       </form>
     </div>
