--- a/index.html
+++ b/index.html
@@ -30,13 +30,21 @@
       </div>
 
       <div class="projects">
-        <h1>Header</h1>
-        <div>
+        <div class="project-info">
+          <h1>Header</h1>
+          <p>2023-18-12</p>
+        </div>
+        
+        <div class="project-todos">
           <ul>
             <li>Text</li>
             <li>Text</li>
             <li>Text</li>
           </ul>
+        </div>
+
+        <div class="project-note">
+          <p>This is a note</p>
         </div>
       </div>
 
