Added some stuff but I forget what (long day)

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 
   <section class="main-content" id="main-content">
     <aside>
-
     </aside>
 
     <main>
-
       <div class="add-new-header">
         <h1>Projects</h1>
         
@@ -30,25 +28,27 @@
       </div>
 
       <div class="projects">
+      
         <div class="project-info">
           <h1>Header</h1>
           <p>2023-18-12</p>
         </div>
+          <div class="closed">
+          <p class="description">Things To Do</p>
 
-        <p class="description">Things To Do</p>
+          <div class="project-todos">
+            <ul>
+              <li>Text</li>
+              <li>Text</li>
+              <li>Text</li>
+            </ul>
+          </div>
 
-        <div class="project-todos">
-          <ul>
-            <li>Text</li>
-            <li>Text</li>
-            <li>Text</li>
-          </ul>
-        </div>
+          <p class="description">Notes</p>
 
-        <p class="description">Notes</p>
-
-        <div class="project-note">
-          <p>This is a note</p>
+          <div class="project-note">
+            <p>This is a note</p>
+          </div>
         </div>
       </div>
 
